is this vector working